[package]
name = "stibag"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1


[dependencies]
bevy = { version = "0.13.2" }
bevy_ecs_ldtk = "0.9.0"
rand_core = "0.6"
bevy_rand = "0.5.2"
bevy_prng = { version = "0.5.2", features = ["rand_chacha", "wyrand"] }
bevy-inspector-egui = "0.23.4"
rand = "0.9.0-alpha.1"
koto = "0.14.0"
thunderdome = "0.6.1"
stopwatch = "0.0.7"
